# FusionSound2

./: AUTHORS  ChangeLog  INSTALL  NEWS  README  fs-update-pkgconfig.in  meson.build  meson_options.txt
include/: fusionsound.h  fusionsound_util.h  gen_fusionsound_strings.sh  meson.build
interfaces/IFusionSoundMusicProvider/: ifusionsoundmusicprovider_wave.c  meson.build
snddrivers/alsa/: alsa.c  meson.build
snddrivers/dummy/: dummy.c  meson.build
snddrivers/oss/: meson.build  oss.c
src/: fusionsound.c  ifusionsound.c  ifusionsound.h  meson.build
src/buffer/: ifusionsoundbuffer.c  ifusionsoundbuffer.h  ifusionsoundstream.c  ifusionsoundstream.h
src/core/: core_sound.c  core_sound.h  coretypes_sound.h  fs_types.h  playback.c  playback.h  sound_buffer.c  sound_buffer.h  sound_device.c  sound_device.h  sound_driver.h  sound_mix.h
src/media/: ifusionsoundmusicprovider.c  ifusionsoundmusicprovider.h
src/misc/: sound_conf.c  sound_conf.h  sound_util.c
src/playback/: ifusionsoundplayback.c  ifusionsoundplayback.h
